Update parser, benchmarks, and README with full comparison suite
Add clang PGO+LTO build target, update benchmark results with all six
parsers (jbin, simdjson, yyjson, sajson, rapidjson, cJSON), and add
reproducibility instructions. jbin now wins 15/18 files vs simdjson.
Remove tracked benchmark binaries and update .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,27 @@
 bench
 bench-simdjson
+bench-cjson
+bench-rapidjson
+bench-sajson
+bench-yyjson
+bench_clang
+bench_clang_pgo
+bench_debug
+bench_perf
 test_runner
 *.o
 *.gcda
 *.gcno
 *.s
+*.profraw
+*.baseline
+*.baseline_*
 gmon.out
 JSONTestSuite/
 data/large.json
 data/github_events_large.json
 data/numbers.json
+
+# Claude Code
+.claude/
+CLAUDE.md
